# dozentenmanager

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEBASE_OVERVIEW.md  CODE_REVIEW.md  DOCKER.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  app.md  config.py  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  progress.md  pyproject.toml  ruff.toml  run.py  test_document_web.py  test_enrollment_web.py  todo.md  update_tests.py
.claude/: settings.local.json
app/: __init__.py
app/forms/: __init__.py  auth.py  course.py  document.py  email.py  exam.py  grade.py  student.py  university.py
app/models/: __init__.py  audit_log.py  base.py  course.py  document.py  enrollment.py  exam.py  exam_component.py  grade.py  student.py  submission.py  university.py  user.py
app/routes/: admin.py  api.py  auth.py  backup.py  course.py  document.py  enrollment.py  exam.py  grade.py  student.py  university.py
app/services/: __init__.py  audit_service.py  base_service.py  course_service.py  document_service.py  enrollment_service.py  exam_service.py  grade_service.py  student_service.py  university_service.py
app/static/css/: THEME-README.md  custom.css  themes.css
app/static/js/: theme-switcher.js
app/templates/: _pagination.html  base.html  home.html
app/templates/admin/: audit_logs.html
app/templates/auth/: login.html  register.html
app/templates/backup/: index.html
app/templates/course/: delete.html  detail.html  form.html  list.html
app/templates/document/: bulk_results.html  bulk_upload.html  delete.html  detail.html  email_import.html  email_results.html  list.html  submission_detail.html  submissions.html  upload.html
app/templates/errors/: 404.html  500.html
app/templates/exam/: component_form.html  delete.html  detail.html  form.html  list.html
app/templates/grade/: bulk.html  components.html  dashboard.html  delete.html  detail.html  edit.html  exam_stats.html  list.html  new.html  new_component.html  student_grades.html
app/templates/student/: delete.html  detail.html  form.html  import.html  list.html
app/templates/university/: delete.html  detail.html  form.html  list.html
app/utils/: __init__.py  auth.py  pagination.py
cli/: backup_cli.py  course_cli.py  document_cli.py  email_cli.py  enrollment_cli.py  exam_cli.py  exam_component_cli.py  grade_cli.py  student_cli.py  university_cli.py
migrations/: env.py
migrations/versions/: 2917cc901cab_add_enrollment_table.py  3684a0b49ad3_add_university_table.py  3733045ba0f3_merge_heads.py  3dbcb98724cd_add_submission_and_document_tables.py  70a94442bf87_add_student_table.py  79883820bd23_add_exam_and_exam_component_tables.py  9b633f2b48b1_add_grading_system_tables.py  b9870ca5693c_add_exam_table.py  cf1e84e1acfd_add_course_table.py  d2f4b6b83c1a_add_student_soft_delete.py  d4bfc60b785e_add_audit_log_table.py  d8e84d7a31a8_add_user_table.py  ebeeb698d825_add_exam_table.py  fc1eb60e1646_add_exam_table.py
ref/: architecture.md  data-model.md  development-workflow.md  features.md  project-overview.md
tests/: conftest.py
tests/integration/: test_backup_routes.py  test_course_routes.py  test_document_routes.py  test_enrollment_routes.py  test_exam_routes.py  test_grade_routes.py  test_student_routes.py  test_university_routes.py
tests/unit/: test_backup_cli.py  test_course_cli.py  test_course_service.py  test_document_service.py  test_email_cli.py  test_enrollment_cli.py  test_enrollment_service.py  test_exam_cli.py  test_exam_component_cli.py  test_exam_service.py  test_grade_service.py  test_student_cli.py  test_student_service.py  test_university_cli.py  test_university_service.py
