[project]
name = "dozentenmanager"
version = "0.1.0"
description = "Student management system for university lecturers to manage students, courses, exams, and grading"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.1",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.mypy]
# MyPy configuration for Dozentenmanager
# https://mypy.readthedocs.io/en/stable/config_file.html

# Target Python version
python_version = "3.11"

# Warnings
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Strictness (start lenient, can tighten over time)
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false

# Miscellaneous
no_implicit_optional = true
strict_equality = true

# Output
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "flask_wtf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask_sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true
