[project]
name = "dozentenmanager"
version = "0.1.0"
description = "Student management system for university lecturers to manage students, courses, exams, and grading"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.1",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "openpyxl>=3.1.5",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "werkzeug>=3.1.5",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
    "types-flask>=1.1.6",
    "types-openpyxl>=3.1.5.20250919",
    "types-werkzeug>=1.0.9",
    "types-wtforms>=3.2.1.20250809",
    "types-xlrd>=2.0.0.20251020",
]

[tool.mypy]
# MyPy configuration for Dozentenmanager
# https://mypy.readthedocs.io/en/stable/config_file.html

# Target Python version
python_version = "3.11"

# Warnings - relaxed for SQLAlchemy and Flask patterns
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true

# Strictness (start lenient, can tighten over time)
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false

# Miscellaneous
no_implicit_optional = true
strict_equality = true

# Output
show_error_codes = true
show_column_numbers = true
pretty = true

# Plugins for better Flask/SQLAlchemy support
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "flask_wtf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask_sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cli.*"
# CLI tools have relaxed type checking - focus on app/ code quality
warn_return_any = false
disable_error_code = ["union-attr", "arg-type", "var-annotated", "attr-defined", "assignment"]

[tool.pytest.ini_options]
# Pytest configuration for Dozentenmanager
# https://docs.pytest.org/en/stable/reference/customize.html

testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=app",
    "--cov=cli",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=40",
    "-v",
]

[tool.coverage.run]
# Coverage.py configuration
# https://coverage.readthedocs.io/en/latest/config.html

source = ["app", "cli"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
# Exclude common patterns from coverage reporting
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
